@@ -1,3 +1,13 @@
+Wed Nov 13 22:07:19 UTC 2013  Mike Martinez  <martinez_m@ociweb.com>
+
+        * dds/DCPS/DataReaderImpl.h:
+        * dds/DCPS/DataReaderImpl.cpp:
+
+        * dds/idl/CPPTemplate.txt:
+
+          Add locking around access to the instances_ container to
+          protect concurrent accesses.
+
 Thu Nov  7 00:58:11 UTC 2013  Mike Martinez  <martinez_m@ociweb.com>
 
         * bin/run_dds.pl:
